# app

./: .dockerignore  .env.demo.example  .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  .venv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Caddyfile  Caddyfile.demo  Caddyfile.dev  Caddyfile.staging  Dockerfile  Makefile  README.en.md  README.md  SECURITY.md  THIRDPARTY-LICENSES.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  docker-migrate.sh  locustfile.py  node_modules  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: codeql.yml  dev-image.yml  e2e.yml  lint.yml  mutation-nightly.yml  perf-nightly.yml  release.yml  test.yml
deploy/: backup.sh  bootstrap.sh  deploy-dev.sh
deploy/postgres-init/: 01-app-role.sh
docs/: README.md  admin-guide.md  coolify-deployment.md  datenschutz.md  dev-deployment.md  disaster-recovery.md  e2e-architecture.md  e2e-runbook.md  fachkonzept-anlaufstelle.md  faq.md  glossar.md  monitoring-guide.md  ops-runbook.md  performance-budgets.json  performance-budgets.md  release-checklist.md  screenshots.en.md  screenshots.md  security-notes.md  sprachleitlinie.md  threat-model.md  user-guide.md
docs/adr/: 001-greenfield-rewrite.md  002-cbvs-and-service-layer.md  003-htmx-alpine-tailwind.md  004-postgresql-only.md  005-facility-scoping-and-rls.md  006-fernet-field-encryption.md  007-auditlog-append-only.md  008-lockout-scope.md  009-settings-inheritance.md  010-sync-pdf-generation.md  011-three-repo-release-pipeline.md  012-incremental-mypy.md  013-dsgvo-art16-no-selfservice.md  014-encrypted-file-vault.md  015-mfa-totp.md  016-search-postgres-only.md  017-deployment-topology.md  018-rollenmodell-superadmin.md  019-custom-admin-site-sudo.md  020-three-role-postgres-model.md  021-retention-modell.md  022-offline-snapshot-keys.md  023-k-anonymization-statistik.md  024-slug-based-identifiers.md  025-csp-unsafe-eval-admin.md  026-rate-limiting.md  027-i18n-strategy.md  028-demo-release-versioning.md  029-local-only-ci.md  030-offline-sync-orchestration-replay-contract.md  031-totp-secret-at-rest.md  032-webauthn-passkeys-2fa.md  README.md  template.md
docs/audits/: 2026-04-21-tiefenanalyse-v0.10.md  2026-04-23-code-analyse.md  2026-04-25-vollanalyse.md  2026-04-26-security-bestand.md  2026-04-26-tiefenanalyse.md  2026-04-30-refactoring-audit-codex-2.md  2026-04-30-refactoring-plan-claude-2.md  2026-04-30-refactoring-plan-claude.md  2026-04-30-refactoring-plan-codex.md  2026-04-30-tiefenanalyse-claude.md  2026-04-30-tiefenanalyse-codex.md  2026-05-14-codebasis-refactoring-audit-codex.md  2026-05-14-produktnutzen-und-testing-review-codex.md  anlaufstelle-audit-claude-chatgpt-kritisch.md  anlaufstelle-audit-claude-chatgptprompt.md  anlaufstelle-audit-claude-claude.md  anlaufstelle-audit-codex-chatgpt.md  anlaufstelle-audit-codex-clau.md  anlaufstelle-audit-codex-kritisch.md  anlaufstelle-audit-gemini-chatgpt.md  anlaufstelle-audit-gemini-claude.md  anlaufstelle-audit-master.md  anlaufstelle-nlnet-audit-gap.md  konsolidierter-audit-anlaufstelle-chatgpt.md  konsolidierter-audit-anlaufstelle-claude.md  konsolidierter-audit-anlaufstelle-gesamtfassung.md
docs/compliance/: cra-einordnung.md
docs/dsgvo-templates/: dsfa.md  informationspflichten.md  toms.md  verarbeitungsverzeichnis.md
docs/en/: README.md  admin-guide.md  data-protection.md  domain-concept-summary.md  glossary.md  user-guide.md
docs/release-notes/: v0.13.1.md
docs/testing/: manual-test-matrix-a.md  manual-test-matrix-b.md  manual-test-matrix-c.md  manual-test-matrix-d.md  manual-test-matrix.md
scripts/: backup.sh  build_test_matrix_index.py  check_licenses.py  check_perf_budgets.py  check_translation_versions.py  check_translations.py  restore-drill.sh  restore.sh  sync_vendor_js.py  verify_agent_docs_sync.py  verify_release_test_guard.py  verify_test_matrix_drift.py  verify_vendor_js_sync.py
scripts/ops/: _backup_common.sh  backup.sh  restore-drill.sh  restore.sh
src/: manage.py
src/anlaufstelle/: apps.py  asgi.py  urls.py  wsgi.py
src/anlaufstelle/settings/: _sentry.py  base.py  demo.py  dev.py  devlive.py  e2e.py  prod.py  test.py
src/core/: admin.py  admin_site.py  apps.py  checks.py  constants.py  context_processors.py  logging.py  urls.py  webauthn_urls.py
src/core/admin/: __init__.py  clients.py  documents.py  events.py  mixins.py  organization.py  system.py  users.py  workflow.py
src/core/dsgvo_templates/: av-vertrag.md  dsfa.md  informationspflichten.md  toms.md  (+1 more)
src/static/: manifest.json
src/templates/: 403.html  403_csrf.html  404.html  500.html  503.html  base.html  offline.html
src/tests/: _authz_expectations.py  _form_helpers.py  _mutation_followup_client_export_helpers.py  _mutation_followup_offline_helpers.py  _mutation_followup_snapshot_helpers.py  _rbac_helpers.py  _residue_expectations.py  conftest.py  test_account.py  test_activity.py  test_admin_actions.py  test_admin_audit.py  test_admin_csp_relax.py  test_admin_facility_scoping.py  test_admin_facility_super_only.py  test_admin_organization_super_only.py  test_admin_site_architecture.py  test_admin_site_facility_scope.py  test_admin_site_helpers.py  test_admin_site_permissions.py  test_admin_user_privilege_escalation.py  test_allowed_hosts.py  test_anonymize_residue.py  test_app_user_no_superuser.py  test_architecture.py  test_architecture_guards_audit.py  test_architecture_guards_models.py  test_architecture_guards_ops.py  test_architecture_guards_release.py  test_architecture_guards_services.py  test_architecture_guards_templates.py  test_architecture_guards_views.py  test_attachment_reachability.py  test_attachment_soft_delete_visibility.py  test_attachment_versioning_stage_b.py  test_audit_append_only_e2e.py  test_audit_chain.py  test_audit_coverage.py  test_audit_detail.py  test_audit_helpers.py  (+263 more)
(+630 files in other folders)
