[project]
name = "anlaufstelle"
version = "0.10.2"
description = "Open-Source-Fachsystem für niedrigschwellige soziale Einrichtungen"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
extend-exclude = ["src/core/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "anlaufstelle.settings.test"
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "--reuse-db"
markers = [
    "e2e: End-to-End-Tests mit Playwright (benötigen laufenden Server)",
    "smoke: Kritische User-Flows für schnelle lokale Validierung",
    "slow: Tests mit Laufzeit > 2s (typisch: Seed-Läufe mit größerem Datensatz). Per `-m 'not slow'` deselektierbar.",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/management/commands/seed*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# --- mypy (Refs #741, Audit-Massnahme #37) ---
# Inkrementelle Einfuehrung: ``core/services/*`` wird strikt geprueft
# (Service-Layer ist Single-Source-of-Truth fuer Business-Logik), der
# Rest hat eine Baseline-Konfiguration ohne strict_optional. Erweiterung
# modulweise — neuer ``[[tool.mypy.overrides]]``-Block pro Modul.
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
# Baseline (gesamtes Repo): warnen bei offensichtlichen Fehlern, aber
# keine strict_optional/strict-Modi. Verhindert eine Wand von
# Findings, die alle anderen Aenderungen blockieren wuerden.
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "anlaufstelle.settings.test"

# Enforced strict zone: services-Layer ist die Stelle, wo Type-Bugs am
# teuersten sind und wo wir die Annotations-Disziplin am hoechsten
# halten wollen.
#
# Bewusst NICHT aktiviert (django-stubs liefert Any aus QuerySet/HttpRequest-
# Hilfen — zu viel Noise fuer den ersten Schritt):
# - ``warn_return_any``  → wuerde count(), build_absolute_uri u.a. flaggen
# - ``disallow_untyped_defs`` → fuer Bestandscode zu strikt
[[tool.mypy.overrides]]
module = "core.services.*"
strict_optional = true
warn_unused_ignores = true

# Migrations + tests sind grundsaetzlich ausgenommen — Migration-Dateien
# sind Django-generiert, Tests duerfen mit Fixtures locker umgehen.
[[tool.mypy.overrides]]
module = "core.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Settings-Module nutzen ``from .base import *`` und implizite Typen
# (``ALLOWED_HOSTS = []``). django-stubs koennte das via Plugin
# typisieren, aber wir wollen die Settings hier nicht mit Annotationen
# zustellen — das ist ein eigener Sprint, falls jemand das mal sauber
# typisieren will.
[[tool.mypy.overrides]]
module = "anlaufstelle.settings.*"
ignore_errors = true
