[project]
name = "anlaufstelle"
version = "0.12.0"
description = "Open-Source-Fachsystem für niedrigschwellige soziale Einrichtungen"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
extend-exclude = ["src/core/migrations"]

[tool.ruff.lint]
# Refs #821: Regelumfang um bugbear (B), pyupgrade (UP), simplify (SIM),
# pep8-naming (N) und bandit (S) erweitert.
select = ["E", "F", "I", "W", "B", "UP", "SIM", "N", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests duerfen assert-Anweisungen, harte Test-Passwoerter und random()
# verwenden; pytest.raises(Exception) und assert-False sind gebraeuchliche
# Test-Patterns; nested-with kommt durch viele patch()-Schichten zustande.
"src/tests/*" = [
    "S101",  # assert in tests
    "S104",  # bind 0.0.0.0 (Test-Server)
    "S105",  # hardcoded password string (test fixtures)
    "S106",  # hardcoded password kwarg (test fixtures)
    "S107",  # hardcoded password default
    "S110",  # try/except/pass in Test-Cleanup
    "S311",  # random in tests/seed
    "S603",  # subprocess (Test-Helper)
    "S607",  # subprocess partial path (Test-Helper)
    "S608",  # SQL aus konstanten Identifiern (MV-Namen) in Tests
    "B007",  # ungenutzte Loop-Variable
    "B011",  # assert False
    "B017",  # blind Exception in pytest.raises
    "SIM117",  # nested with-Statements (in patch-Stacks oft klarer)
    "SIM108",  # ternary
    "SIM102",  # nested if (Tests sind expliziter)
    "SIM105",  # try/except/pass im Test-Cleanup statt contextlib.suppress
    "N802",  # Test-Hilfsmethoden duerfen camelCase
    "N806",  # CONSTANT_INSIDE_FUNCTION
    "N817",  # Import-Alias als Akronym
    "N818",  # Exception-Naming
]
# Seeds nutzen random() bewusst zur Verteilung — kein crypto-Pfad.
"src/core/seed/*" = ["S311"]
"src/core/management/commands/seed*.py" = ["S311", "S106"]

# Dev-/CI-Skripte rufen System-Tools (msgfmt, pip-licenses) als Subprocess
# auf — kein untrusted input. Refs #860.
"scripts/*" = [
    "S603",  # subprocess
    "S607",  # subprocess partial executable path
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "anlaufstelle.settings.test"
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "--reuse-db"
markers = [
    "e2e: End-to-End-Tests mit Playwright (benötigen laufenden Server)",
    "smoke: Kritische User-Flows für schnelle lokale Validierung",
    "slow: Tests mit Laufzeit > 2s (typisch: Seed-Läufe mit größerem Datensatz). Per `-m 'not slow'` deselektierbar.",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/management/commands/seed*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# --- mypy (Refs #741, Audit-Massnahme #37) ---
# Inkrementelle Einfuehrung: ``core/services/*`` wird strikt geprueft
# (Service-Layer ist Single-Source-of-Truth fuer Business-Logik), der
# Rest hat eine Baseline-Konfiguration ohne strict_optional. Erweiterung
# modulweise — neuer ``[[tool.mypy.overrides]]``-Block pro Modul.
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
# Baseline (gesamtes Repo): warnen bei offensichtlichen Fehlern, aber
# keine strict_optional/strict-Modi. Verhindert eine Wand von
# Findings, die alle anderen Aenderungen blockieren wuerden.
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "anlaufstelle.settings.test"

# Enforced strict zone: services-Layer ist die Stelle, wo Type-Bugs am
# teuersten sind und wo wir die Annotations-Disziplin am hoechsten
# halten wollen.
#
# Bewusst NICHT aktiviert (django-stubs liefert Any aus QuerySet/HttpRequest-
# Hilfen — zu viel Noise fuer den ersten Schritt):
# - ``warn_return_any``  → wuerde count(), build_absolute_uri u.a. flaggen
# - ``disallow_untyped_defs`` → fuer Bestandscode zu strikt
[[tool.mypy.overrides]]
module = "core.services.*"
strict_optional = true
warn_unused_ignores = true

# Refs #822 (C-55): Forms sind die Grenze zwischen unsauberem HTTP-Input und
# der typisierten Service-Schicht. Strict_optional + check_untyped_defs
# verhindert, dass None-Werte aus cleaned_data unbemerkt durchrutschen.
[[tool.mypy.overrides]]
module = "core.forms.*"
strict_optional = true
check_untyped_defs = true
warn_unused_ignores = true

# Migrations + tests sind grundsaetzlich ausgenommen — Migration-Dateien
# sind Django-generiert, Tests duerfen mit Fixtures locker umgehen.
[[tool.mypy.overrides]]
module = "core.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Settings-Module nutzen ``from .base import *`` und implizite Typen
# (``ALLOWED_HOSTS = []``). django-stubs koennte das via Plugin
# typisieren, aber wir wollen die Settings hier nicht mit Annotationen
# zustellen — das ist ein eigener Sprint, falls jemand das mal sauber
# typisieren will.
[[tool.mypy.overrides]]
module = "anlaufstelle.settings.*"
ignore_errors = true
