[project]
name = "anlaufstelle"
version = "0.22.0"
description = "Open-Source-Fachsystem für niedrigschwellige soziale Einrichtungen"
# Floor bewusst bei >=3.13 (Refs #1481): oeffentliches Projekt, Django 6.0
# stuetzt 3.13+, Contributor auf 3.13 nicht aussperren. Dev + Prod fahren
# primaer 3.14 (Docker python:3.14-slim, lokales .venv 3.14); der Code bleibt
# 3.13-kompatibel — darum stehen mypy python_version + ruff target-version
# (unten) bewusst weiter auf dem 3.13-Floor.
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
extend-exclude = ["src/core/migrations"]

[tool.ruff.lint]
# Refs #821: Regelumfang um bugbear (B), pyupgrade (UP), simplify (SIM),
# pep8-naming (N) und bandit (S) erweitert.
select = ["E", "F", "I", "W", "B", "UP", "SIM", "N", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests duerfen assert-Anweisungen, harte Test-Passwoerter und random()
# verwenden; pytest.raises(Exception) und assert-False sind gebraeuchliche
# Test-Patterns; nested-with kommt durch viele patch()-Schichten zustande.
"src/tests/*" = [
    "S101",  # assert in tests
    "S104",  # bind 0.0.0.0 (Test-Server)
    "S105",  # hardcoded password string (test fixtures)
    "S106",  # hardcoded password kwarg (test fixtures)
    "S107",  # hardcoded password default
    "S110",  # try/except/pass in Test-Cleanup
    "S311",  # random in tests/seed
    "S603",  # subprocess (Test-Helper)
    "S607",  # subprocess partial path (Test-Helper)
    "S608",  # SQL aus konstanten Identifiern (MV-Namen) in Tests
    "B007",  # ungenutzte Loop-Variable
    "B011",  # assert False
    "B017",  # blind Exception in pytest.raises
    "SIM117",  # nested with-Statements (in patch-Stacks oft klarer)
    "SIM108",  # ternary
    "SIM102",  # nested if (Tests sind expliziter)
    "SIM105",  # try/except/pass im Test-Cleanup statt contextlib.suppress
    "N802",  # Test-Hilfsmethoden duerfen camelCase
    "N806",  # CONSTANT_INSIDE_FUNCTION
    "N817",  # Import-Alias als Akronym
    "N818",  # Exception-Naming
]
# Refs #885: dev-ops/release/tests/* enthaelt Unit-Tests fuer das Release-Sanitize-Tool.
"dev-ops/release/tests/*" = [
    "S101",  # assert in tests
]
# Seeds nutzen random() bewusst zur Verteilung — kein crypto-Pfad.
"src/core/seed/*" = ["S311"]
"src/core/management/commands/seed*.py" = ["S311", "S106"]

# Dev-/CI-Skripte rufen System-Tools (msgfmt, pip-licenses) als Subprocess
# auf — kein untrusted input. Refs #860.
"scripts/**" = [
    "S603",  # subprocess
    "S607",  # subprocess partial executable path
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "anlaufstelle.settings.test"
pythonpath = ["src"]
# Refs #885: dev-ops/release/tests enthält Unit-Tests für das Release-Sanitize-Tool
# (dev-ops/release/sanitize_release_tree.py). Beim Tree-Snapshot dev→stage→app wird
# der dev-ops/-Ordner ausgeschlossen (Excludes in dev-ops/release/build-release.sh).
testpaths = ["src/tests"]
addopts = "--reuse-db"
markers = [
    "e2e: End-to-End-Tests mit Playwright (benötigen laufenden Server)",
    "smoke: Kritische User-Flows für schnelle lokale Validierung",
    "offline_smoke: Offline-Kernsuite (SW-Lebenszyklus, Sync-Orchestrator/Web-Locks, Dead-Letter) für den seltenen, seriellen WebKit-Smoke (Refs #1418).",
    "slow: Tests mit Laufzeit > 2s (typisch: Seed-Läufe mit größerem Datensatz). Per `-m 'not slow'` deselektierbar.",
    "flaky_quarantine: Tests, die wegen Flakiness unter Beobachtung stehen (Refs #922).",
    "architecture: Meta-Tests, die Source-Files scannen (z.B. ``AuditLog.objects.create()``-Vorkommen zählen). Werden in Mutmut-Runs (#930) deselektiert, weil mutmut die gezählten Patterns vervielfacht.",
    "authz_audit: Einmaliger/wiederholbarer Live-AuthZ-Audit am E2E-Server (Refs #1055). Läuft nur mit AUTHZ_AUDIT=1, schreibt den Matrix-Report nach docs/archive/audits/.",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/management/commands/seed*.py",
    # Playwright-getriebenes Doku-Tooling: nur gegen einen laufenden E2E-Server
    # sinnvoll abdeckbar (manuell/e2e), nicht per Unit-Test — analog seed*.py.
    "*/management/commands/screenshot.py",
]

# --- mutmut (Refs #922 / #923) ---
# Mutation-Testing fuer den Service-Layer (Business-Logik) und Forms (Eingabe-
# validierung). Beide Bereiche sind hoch-kritisch und sollten nicht nur per
# Coverage-Prozent, sondern per Mutation-Score abgesichert sein.
#
# Ausgenommen sind absichtlich:
# - core.views/*         → werden ueber E2E + view-Tests abgedeckt
# - core.models/*        → primaer Django-ORM-Definitionen, wenig Logik
# - core.middleware/*    → eigene Test-Suite, einfacher als Unit zu testen
#
# Runner schliesst e2e und slow aus, damit ein Mutation-Run nicht Stunden
# laeuft. Das Ziel ist ein nightly-Job ueber Cron, kein PR-Gate.
[tool.mutmut]
# Refs #930: ``paths_to_mutate`` muss in mutmut 3.x eine TOML-
# Liste sein. Ein String wird zeichenweise iteriert (jeder ``/`` triggert
# Filesystem-Root-Walk → Crash mit ``/etc/vconsole.conf``-FileNotFoundError).
# Refs #923 hatte den String-Wert als regression eingeführt.
paths_to_mutate = ["src/core/services/", "src/core/forms/"]
# Refs #930 / #1388 — Files mit reiner Ops/IO-Logik. Die Pfade folgen dem
# Subpackage-Umzug (Refs #910), sonst mutiert mutmut die Wrapper wieder mit:
# ``system/health.py`` ist ``shutil``-/``importlib``-Wrapper;
# ``security/invite.py`` ist ``send_mail``-Wrapper; ``file_vault/virus_scan.py``
# ist ClamAV-``clamd``-Wrapper (Subprocess-IO).
# Mutationen dort produzieren Survivors, die nur durch tiefes Mocking
# erschlagbar wären — Mehrwert minimal gegenüber Ops-Monitoring (Sentry,
# Healthcheck-Endpoint, real-world Ops-RC-Tests). ``virus_scan.py``
# zusätzlich, weil mutmut-Runs mit Tests gegen den realen ClamAV-Container
# 240s-Timeouts pro Mutation produzieren — Crash-Risiko bei
# Container-Verlust (siehe 2026-05-18-Run-Abbruch in Baseline-Doc).
do_not_mutate = [
    "src/core/services/system/health.py",
    "src/core/services/security/invite.py",
    "src/core/services/file_vault/virus_scan.py",
    # Refs #944 / #910 — File-Vault-Policy (Extension-
    # Whitelist, Magic-Bytes, ClamAV-Wrapper) lag urspruenglich in
    # ``file_vault.py``, wurde dann nach ``file_vault_validation.py``
    # ausgelagert und ist seit #910 als ``file_vault/policy.py`` im
    # Subpackage angekommen. Tests laufen über ``store_encrypted_file``,
    # das pro Aufruf 15-30 s für echte Encryption + DB-Saves braucht —
    # Mutmut markiert ~100 Mutations als Timeout statt Survivor
    # (Test-Suite-Performance-Artefakt, keine echte Test-Schwäche).
    # Whitelisten korrigiert den Score-Beitrag, ohne den
    # ``store_encrypted_file``-Hot-Path aus dem Mutation-Pool zu nehmen.
    # Validation-Logik bleibt durch ``test_file_vault.py`` +
    # ``test_file_vault_magic_bytes.py`` + ``test_file_upload_errors.py``
    # vollständig getestet.
    "src/core/services/file_vault/policy.py",
]
# Auch ``tests_dir`` wird in mutmut 3.x als iterable behandelt — String führt
# zur selben Zeichen-für-Zeichen-Iteration im pytest-Argv. TOML-Liste nötig.
tests_dir = ["src/tests/"]
# In mutmut 3.x ist das Feld ``runner`` ein Dead-Letter — es gibt einen
# eingebauten ``PytestRunner``. Marker- und Flag-Konfiguration läuft über
# ``pytest_add_cli_args`` (Liste, NICHT String).
#
# ``not architecture`` schließt die ``test_architecture_guards_*``-Files aus.
# Die Guards scannen Source-Files und zählen Vorkommen (z.B.
# ``AuditLog.objects.create()``); im Mutmut-Tree multipliziert mutmut diese
# Patterns künstlich. Marker statt ``--ignore``, damit ``make ci`` die
# Guards weiterhin ausführt.
pytest_add_cli_args = [
    "-x",
    "-m",
    "not e2e and not slow and not architecture",
]
backup = false
# Damit der Mutmut-Runner pytest-django booten kann, müssen Django-Projekt,
# Tests und der nicht-mutierte Teil von ``core`` ebenfalls nach
# ``mutants/`` kopiert werden. ``copy_also_copy_files`` läuft nach
# ``copy_src_dir``, aber ``create_mutants`` überschreibt die mutierten
# Dateien danach wieder mit den generierten Mutationen — d.h. die
# Overlap-Files in ``src/core/`` (services/forms) werden korrekt mutiert.
also_copy = [
    "src/anlaufstelle/",
    "src/manage.py",
    "src/core/",
    "src/tests/",
    "src/templates/",
    "src/locale/",
    "src/static/",
    "pyproject.toml",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Refs #945/#949: Coverage-Floor symmetrisch zur CI (test.yml).
# Lokales ``coverage report`` faillt unter 96 %, ebenso wie der CI-Run.
fail_under = 96
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# --- mypy (Refs #741, Audit-Massnahme #37) ---
# Inkrementelle Einfuehrung: ``core/services/*`` wird strikt geprueft
# (Service-Layer ist Single-Source-of-Truth fuer Business-Logik), der
# Rest hat eine Baseline-Konfiguration ohne strict_optional. Erweiterung
# modulweise — neuer ``[[tool.mypy.overrides]]``-Block pro Modul.
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
# Baseline (gesamtes Repo): warnen bei offensichtlichen Fehlern, aber
# keine strict_optional/strict-Modi. Verhindert eine Wand von
# Findings, die alle anderen Aenderungen blockieren wuerden.
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "anlaufstelle.settings.test"

# Enforced strict zone: services-Layer ist die Stelle, wo Type-Bugs am
# teuersten sind und wo wir die Annotations-Disziplin am hoechsten
# halten wollen.
#
# Bewusst NICHT aktiviert (django-stubs liefert Any aus QuerySet/HttpRequest-
# Hilfen — zu viel Noise fuer den ersten Schritt):
# - ``warn_return_any``  → wuerde count(), build_absolute_uri u.a. flaggen
# - ``disallow_untyped_defs`` → fuer Bestandscode zu strikt
[[tool.mypy.overrides]]
module = "core.services.*"
strict_optional = true
warn_unused_ignores = true

# Refs #822 (C-55): Forms sind die Grenze zwischen unsauberem HTTP-Input und
# der typisierten Service-Schicht. Strict_optional + check_untyped_defs
# verhindert, dass None-Werte aus cleaned_data unbemerkt durchrutschen.
[[tool.mypy.overrides]]
module = "core.forms.*"
strict_optional = true
check_untyped_defs = true
warn_unused_ignores = true

# Migrations + tests sind grundsaetzlich ausgenommen — Migration-Dateien
# sind Django-generiert, Tests duerfen mit Fixtures locker umgehen.
[[tool.mypy.overrides]]
module = "core.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Settings-Module nutzen ``from .base import *`` und implizite Typen
# (``ALLOWED_HOSTS = []``). django-stubs koennte das via Plugin
# typisieren, aber wir wollen die Settings hier nicht mit Annotationen
# zustellen — das ist ein eigener Sprint, falls jemand das mal sauber
# typisieren will.
[[tool.mypy.overrides]]
module = "anlaufstelle.settings.*"
ignore_errors = true
